fixed issues found by tests